Fix logo on mobile (<640px width)
The logo overlaps with the title when the enclosing <a> tag does not
constrain its dimensions.

--- a/style.scss
+++ b/style.scss
@@ -165,9 +165,12 @@ img {
 
 .site-avatar {
   float: left;
-  width: 70px;
+  margin-right: 20px;
+
+  // Constrain logo image dimensions
+  // (Natural image dimensions: 88x121, see ./images/dalmug_logo.png)
+  width: 51px;
   height: 70px;
-  margin-right: 15px;
 
   @include mobile {
     float: none;
